clusters/milkyway/apps/games/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: wordle-ingress
spec:
 ingressClassName: public
 tls:
 - hosts:
   - wordle.milkyway.cboxlab.com
   secretName: wordle-tls-secret
 rules:
 - host: wordle.milkyway.cboxlab.com
   http:
     paths:
     - backend:
         service:
           name: wordle
           port:
             name: http
       path: /
       pathType: Prefix
